@@ -3,6 +3,11 @@ Changes after KPresenter 1.3
 Fixes:
 - Fixed possible crash in presentation mode if not all slides are shown
 - Fixed take tmp objects for redrawing in effect from the correct page
+- Fixed show the duration for the correct page if not all slides are shown
+
+Changes:
+- If a page is shown more than once during a presentation add the time for 
+  the duration instead of showing only the last duration.
 
 Changes after KPresenter 1.3 RC1
 ================================
